<resources>
    <string name="app_name">ANVW</string>
    <string name="settings">Settings</string>
    <string name="Music">Music</string>
    <string name="SFX">SFX</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Back">Back</string>
    <string name="ScoreBoard">ScoreBoard</string>
    <string name="Help">Help</string>
    <string name="CONTINUE">Continue</string>
    <string name="NEWGAME">NewGame</string>
    <string name="SELECTLEVEL">SelectLevel</string>
    <string name="NewGame">NewGame</string>
    <string name="pause">Pause</string>
    <string name="todo">TODO</string>
    <string name="level1">Level_1</string>
    <string name="level2">Level_2</string>
    <string name="level3">Level_3</string>
    <string name="level4">Level_4</string>

    <string name="h1">* Move or Slide the screen to move the ball</string>
    <string name="h2">* Collect the coins to get high score</string>
    <string name="h3">* Try to go the best root</string>
    <string name="h4">* Try to skip abstacles</string>
    <string name="h5">* Enjoy....</string>

    <string name="name">Enter your Name</string>
    <string name="done">Done</string>

    <string name="restart">RestartLevel</string>
    <string name="resume">Resume</string>
    <string name="settingss">Settings</string>
    <string name="qmain">QuitToMain</string>
    <string name="quit">Quit</string>

    <string name="sc1">Player_1       1030</string>
    <string name="sc2">Player_2       900</string>
    <string name="sc3">Player_3       880</string>
    <string name="sc4">Player_4       750</string>
    <string name="sc5">Player_5       500</string>
    <string name="score_board">Score Board</string>

    <string name="clicked_btn_play">clicked botten </string>
    <string name="clicked_btn_scoreboard">clicked score brard</string>
    <string name="clicked_btn_Settings">clicked settings</string>
    <string name="clicked_btn_Help">clicked help</string>
    <string name="clicked_btn_Quit">clicked quit</string>

    <string name="complete">LEVEL COMPLETED</string>
    <string name="currentlevel">(level)</string>
    <string name="score">Score</string>
    <string name="lscore">(yourscore)</string>
    <string name="click_next">NEXT</string>

    <string name="warning_enterName">Give A Name First...</string>

    <string name="Level">(level)</string>
    <string name="yoyeScore">YOUR SCORE</string>
    <string name="yscore">(score)</string>
    <string name="retry">RETRY</string>

    <string name="next">NEXT</string>
    <string name="fragment_dialog">dialog</string>

    <string name="toMain">GoToMain</string>

    <string name="over">GAME OVER !</string>
    <string name="YourScore">YOUR SCORE</string>
    <string name="sScore">(Score)</string>
    <string name="RETRY">RETRY</string>
    <string name="GoToMain">Go To Main</string>

    <string name="next2">NEXT</string>

    <string name="comple">LEVEL COMPLETED</string>
    <string name="level">(level)</string>
    <string name="Yscore">Your Score</string>
    <string name="sc">(yourscore)</string>
    <string name="Next">NEXT</string>

</resources>
