<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b1" />

    <TextView
        android:id="@+id/txtView_levelCompleted"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:text="@string/comple"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/txtView_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Level"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btn_nextLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_levelCompleted" />

    <TextView
        android:id="@+id/txtView_yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Yscore"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtView_level"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yscore"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtView_level"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_nextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_butten_rounded"
        android:text="@string/Next"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_level" />
</androidx.constraintlayout.widget.ConstraintLayout>
